# c-backgroundsubstrcution

./: CMakeLists.txt  README.md  backgoundsub.cpp  resize.cpp
